<resources>
    <string name="app_name">usandodb</string>
    <string name="c_d">Cód:</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="listar">Listar</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar\n</string>
</resources>