<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_d" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btIncluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incluir" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir" />

    <Button
        android:id="@+id/btPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar" />

    <Button
        android:id="@+id/btListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar" />

</LinearLayout>